workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__new_worktree_dialog_marks_missing_agents_and_has_no_name_field.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │       ┌ New worktree in api · staccato ──────────────────────┐        "
"   ◆ rate-limit             │       │› Agent   ● claude                                    │        "
"   ○ docs-update            │       │          ○ opencode  no full autonomy                │        "
" ▾ lisa                     │       │          ○ gemini  not installed                     │        "
"   no worktrees · n         │       │                                                      │        "
" ▾ web                      │       │  Model   ‹ default ›                                 │        "
"   ✔ new-checkout           │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
