workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__new_worktree_dialog_previews_the_branch_and_marks_missing_agents.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │       ┌ New worktree in api ─────────────────────────────────┐        "
"   ◆ rate-limit             │       │› Name    Fix Login!▏                                 │        "
"   ○ docs-update            │       │          branch: fix-login                           │        "
" ▾ lisa                     │       │  Task    what should the agent do? (optional)        │        "
"   no worktrees · n         │       │  Agent   ● claude                                    │        "
" ▾ web                      │       │          ○ opencode  no full autonomy                │        "
"   ✔ new-checkout           │       │          ○ gemini  not installed                     │        "
"                            │       │  Model   ‹ default ›                                 │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
