workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__new_worktree_dialog_shows_the_task_field.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ New worktree in api ─────────────────────────────────┐        "
"   ○ docs-update            │       │› Name    ▏                                           │        "
" ▾ web                      │       │          branch: —                                   │        "
"   ✔ new-checkout           │       │                                                      │        "
" ▾ lisa                     │       │  Task    what should the agent do? (optional)        │        "
"   no worktrees · n         │       │                                                      │        "
"                            │       │  Agent   ● claude                                    │        "
"                            │       │          ○ opencode  no full autonomy                │        "
"                            │       │          ○ gemini  not installed                     │        "
"                            │       │                                                      │        "
"                            │       │  Model   ‹ default ›                                 │        "
"                            │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
