workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__new_worktree_from_a_group_fits_the_smallest_terminal.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJE┌ New worktree in B-Metric ────────────────────────┐  "
"▐▾ B-M│› Repo    ‹ api ›  1 of 3                         │  "
"   ◉ f│  Name    piano                                   │  "
"   ◆ d│          branch: piano · auto                    │  "
" ▾ blo│  Task    what should the agent do? (optional)    │  "
"   no │  Agent   ● claude                                │  "
" ▾ lis│          ○ opencode  no full autonomy            │  "
"   ✔ s│  Model   ‹ default ›                             │  "
"      │  Mode    (•) normal   ( ) full autonomy          │  "
"      │  ⏎ create · tab next field · ←→ change · esc     │  "
"      └──────────────────────────────────────────────────┘  "
"                                                            "
