workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__new_worktree_from_a_group_starts_with_the_repo_field.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
"▐▾ B-Metric                 │                                                                       "
"   ◉ fix-ingest-lag     api │                                                                       "
"   ◆ dashboard-filter   web │                                                                       "
" ▾ bloom                    │                                                                       "
"   no worktrees · n         │       ┌ New worktree in B-Metric · cymbal ───────────────────┐        "
" ▾ lisa                     │       │› Repo    ‹ consumer ›  2 of 3                        │        "
"   ✔ sidebar-groups         │       │                                                      │        "
"                            │       │  Agent   ● claude                                    │        "
"                            │       │          ○ opencode  no full autonomy                │        "
"                            │       │          ○ gemini  not installed                     │        "
"                            │       │                                                      │        "
"                            │       │  Model   ‹ default ›                                 │        "
"                            │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
