workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__project_picker_explains_a_folder_it_cannot_read.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │                                                                       "
"   ○ docs-update            │                                                                       "
" ▾ lisa                     │       ┌ Add project ─────────────────────────────────────────┐        "
"   no worktrees · n         │       │  ~/missing/                                          │        "
" ▾ web                      │       │  › ~/missing/▏                                       │        "
"   ✔ new-checkout           │       │                                                      │        "
"                            │       │  Cannot open this folder: no such folder             │        "
"                            │       │                                                      │        "
"                            │       │  ← up · esc cancel                                   │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
