workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__project_picker_fits_the_smallest_terminal.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
"  ┌ Add project ─────────────────────────────────────┐      "
"  │  ~/Workspace/                               1/35 │      "
"  │  › ▏                                             │      "
"  │                                                  │      "
"  │  ▐ ● glowz                                       │      "
"  │    ● glowz-api                                   │      "
"  │    ● lisa                                  added │      "
"  │    ● service-00                                  │      "
"  │                                                  │      "
"  │  ⏎ add · → open · ← up · esc cancel              │      "
"  └──────────────────────────────────────────────────┘      "
"                                                            "
