workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__project_picker_lists_repositories_then_folders_and_marks_mapped_ones.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ Add project ─────────────────────────────────────────┐        "
"   ○ docs-update            │       │  ~/Workspace/                                        │        "
" ▾ lisa                     │       │  › ▏                                                 │        "
"   no worktrees · n         │       │                                                      │        "
" ▾ web                      │       │  ▐ ● glowz                                           │        "
"   ✔ new-checkout           │       │    ● glowz-api                                       │        "
"                            │       │    ● lisa                                      added │        "
"                            │       │      archive/                                        │        "
"                            │       │      notes/                                          │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ add · → open · ← up · esc cancel                  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
