workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__project_picker_narrows_the_list_as_you_type.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ Add project ─────────────────────────────────────────┐        "
"   ○ docs-update            │       │  ~/Workspace/                                        │        "
" ▾ web                      │       │  › glo▏                                              │        "
"   ✔ new-checkout           │       │                                                      │        "
" ▾ lisa                     │       │  ▐ ● glowz                                           │        "
"   no worktrees · n         │       │    ● glowz-api                                       │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ add · → open · ← up · esc cancel                  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
