workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__project_picker_offers_groups_on_a_plain_folder.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ Add project ─────────────────────────────────────────┐        "
"   ○ docs-update            │       │  ~/Workspace/                                        │        "
" ▾ lisa                     │       │  › arch▏                                             │        "
"   no worktrees · n         │       │                                                      │        "
" ▾ web                      │       │  ▐   archive/                                        │        "
"   ✔ new-checkout           │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ open · ^g add as group · ^n new group · esc       │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
