workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__project_picker_offers_to_open_a_plain_folder.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ Add project ─────────────────────────────────────────┐        "
"   ○ docs-update            │       │  ~/Workspace/                                        │        "
" ▾ lisa                     │       │  › arch▏                                             │        "
"   no worktrees · n         │       │                                                      │        "
" ▾ web                      │       │  ▐   archive/                                        │        "
"   ✔ new-checkout           │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ open · ^g as group · ^n new group · esc cancel    │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
