workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__project_picker_says_when_nothing_matches.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ Add project ─────────────────────────────────────────┐        "
"   ○ docs-update            │       │  ~/Workspace/                                        │        "
" ▾ lisa                     │       │  › zzz▏                                              │        "
"   no worktrees · n         │       │                                                      │        "
" ▾ web                      │       │  no match                                            │        "
"   ✔ new-checkout           │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │  ← up · ^n new group · esc cancel                    │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
